feat(completions): update scoop

--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -1449,24 +1449,24 @@
   "info": {
     "tip": {
       "bucket": {
-        "add": "Add bucket --- {{ $bucket }}",
-        "rm": "Remove bucket --- {{ $bucket }}"
+        "add": "Add bucket: {{ $bucket }}",
+        "rm": "Remove bucket: {{ $bucket }}"
       },
       "cache": {
         "rm": [
-          "Remove download cache --- {{ $cache }}\n",
+          "Remove download cache: {{ $cache }}\n",
           "{{ $path }}"
         ]
       },
-      "cleanup": "Clean up app --- {{ $app }}",
-      "hold": "Disable updates for app --- {{ $app }}",
+      "cleanup": "Clean up app: {{ $app }}",
+      "hold": "Disable updates for app: {{ $app }}",
       "prefix": [
-        "Get the path of app --- {{ $app }}\n",
+        "Get the path of app: {{ $app }}\n",
         "{{ $path }}"
       ],
-      "unhold": "Enable updates for app --- {{ $app }}",
-      "uninstall": "Uninstall app --- {{ $app }}",
-      "update": "Update app --- {{ $app }}"
+      "unhold": "Enable updates for app: {{ $app }}",
+      "uninstall": "Uninstall app: {{ $app }}",
+      "update": "Update app: {{ $app }}"
     }
   }
 }
