--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -1447,24 +1447,24 @@
   "info": {
     "tip": {
       "bucket": {
-        "add": "添加 bucket --- {{ $bucket }}",
-        "rm": "移除 bucket --- {{ $bucket }}"
+        "add": "添加 bucket: {{ $bucket }}",
+        "rm": "移除 bucket: {{ $bucket }}"
       },
       "cache": {
         "rm": [
-          "移除下载缓存 --- {{ $cache }}\n",
+          "移除下载缓存: {{ $cache }}\n",
           "{{ $path }}"
         ]
       },
-      "cleanup": "清理 app --- {{ $app }}",
-      "hold": "禁用应用更新 --- {{ $app }}",
+      "cleanup": "清理 app: {{ $app }}",
+      "hold": "禁用应用更新: {{ $app }}",
       "prefix": [
-        "获取应用的存储路径 --- {{ $app }}\n",
+        "获取应用的存储路径: {{ $app }}\n",
         "{{ $path }}"
       ],
-      "unhold": "启用应用更新 --- {{ $app }}",
-      "uninstall": "卸载 app --- {{ $app }}",
-      "update": "更新 app --- {{ $app }}"
+      "unhold": "启用应用更新: {{ $app }}",
+      "uninstall": "卸载 app: {{ $app }}",
+      "update": "更新 app: {{ $app }}"
     }
   }
 }
