refactor(module): improve the update notification

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -2426,7 +2426,8 @@
     "init_info": [
       "\n",
       "✨✨✨ <@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- init successfully ✨✨✨\n",
-      "<@Yellow>The following is displayed for the first time only, you can also see it by running <@Magenta>psc<@Yellow>.\n\n",
+      "<@Yellow>The following is displayed for the first time only, you can also see it by running <@Magenta>psc<@Yellow>.\n",
+      "\n",
       "{{ $PSCompletions.info.description }}",
       "\n"
     ],
@@ -2515,22 +2516,18 @@
         ]
       },
       "update": [
-        "<@Yellow>PSCompletions module update: <@Magenta>{{ $PSCompletions.version }}<@Yellow> => <@Magenta>{{ $PSCompletions.config.enable_module_update }}<@Blue>\n\n",
-        "{{ ",
-        "$version_list=$PSCompletions.get_raw_content(\"$($PSCompletions.path.temp)\\CHANGELOG.json\") | ConvertFrom-Json;",
-        "$lang = if($PSCompletions.language -eq 'zh-CN'){ 'zh-CN' }else{ 'en-US' };",
-        "$log = @();",
-        "foreach($_ in $version_list) {",
-        "   if($_.version -eq $PSCompletions.version){ break }",
-        "   $log += $_.info.$($lang) -join \"`n\"",
-        "}",
-        "$log -join \"`n\"",
-        "}}\n\n",
-        "<@Cyan>------------------------------\n",
-        "The following are update commands that may be needed:\n\n",
-        "<@Magenta>Update-Module PSCompletions\n\n",
-        "Update-PSResource PSCompletions\n\n",
-        "scoop update abgox.PSCompletions\n\n",
+        "\n",
+        "<@Cyan>[Module Update]\n",
+        "<@Blue>PSCompletions: <@Magenta>{{ $PSCompletions.version }} <@Cyan>=> <@Magenta>{{ $PSCompletions.config.enable_module_update }}\n",
+        "\n",
+        "<@Cyan>[Version Changelog]\n",
+        "Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG.md<@Cyan>\n",
+        "Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG.md<@Cyan>\n",
+        "\n",
+        "<@Cyan>[Update Command]\n",
+        "<@Magenta>Update-Module PSCompletions\n",
+        "Update-PSResource PSCompletions\n",
+        "scoop update abgox.PSCompletions\n",
         "scoop update pscompletions\n"
       ],
       "updating": "<@Cyan>Try to run the command: <@Magenta>{{ $update_cmd }}<@Cyan>\nTrying to update PSCompletions module..."
