--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -2420,7 +2420,8 @@
     "init_info": [
       "\n",
       "✨✨✨ <@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- 初始化成功 ✨✨✨\n",
-      "<@Yellow>以下内容仅首次初始化显示, 你可以通过运行 <@Magenta>psc<@Yellow> 来查看它们\n\n",
+      "<@Yellow>以下内容仅首次初始化显示, 你可以通过运行 <@Magenta>psc<@Yellow> 来查看它们\n",
+      "\n",
       "{{ $PSCompletions.info.description }}",
       "\n"
     ],
@@ -2509,22 +2510,18 @@
         ]
       },
       "update": [
-        "<@Yellow>PSCompletions 模块更新: <@Magenta>{{ $PSCompletions.version }}<@Yellow> => <@Magenta>{{ $PSCompletions.config.enable_module_update }}<@Blue>\n\n",
-        "{{ ",
-        "$version_list=$PSCompletions.get_raw_content(\"$($PSCompletions.path.temp)\\CHANGELOG.json\") | ConvertFrom-Json;",
-        "$lang = if($PSCompletions.language -eq 'zh-CN'){ 'zh-CN' }else{ 'en-US' };",
-        "$log = @();",
-        "foreach($_ in $version_list) {",
-        "   if($_.version -eq $PSCompletions.version){ break }",
-        "   $log += $_.info.$($lang) -join \"`n\"",
-        "}",
-        "$log -join \"`n\"",
-        "}}\n\n",
-        "<@Cyan>------------------------------\n",
-        "以下是可能需要的更新命令:\n\n",
-        "<@Magenta>Update-Module PSCompletions\n\n",
-        "Update-PSResource PSCompletions\n\n",
-        "scoop update abgox.PSCompletions\n\n",
+        "\n",
+        "<@Cyan>[模块更新]\n",
+        "<@Blue>PSCompletions: <@Magenta>{{ $PSCompletions.version }} <@Cyan>=> <@Magenta>{{ $PSCompletions.config.enable_module_update }}\n",
+        "\n",
+        "<@Cyan>[版本日志]\n",
+        "Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
+        "Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
+        "\n",
+        "<@Cyan>[更新命令]\n",
+        "<@Magenta>Update-Module PSCompletions\n",
+        "Update-PSResource PSCompletions\n",
+        "scoop update abgox.PSCompletions\n",
         "scoop update pscompletions\n"
       ],
       "updating": "<@Cyan>尝试运行命令: <@Magenta>{{ $update_cmd }}<@Cyan>\nPSCompletions 模块正在尝试更新..."
