feat(module): add `enable_menu_show_below` in `psc menu config`
See #93

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -542,6 +542,27 @@
               ]
             },
             {
+              "name": "enable_menu_show_below",
+              "tip": [
+                "Current Value: {{ $PSCompletions.config.enable_menu_show_below }} (Default: 0)",
+                "When the module completion menu needs to be displayed above the cursor, scroll the content buffer to let the cursor return to the top, and display the menu below the cursor."
+              ],
+              "next": [
+                {
+                  "name": "0",
+                  "tip": [
+                    "Set to 0 (Default)"
+                  ]
+                },
+                {
+                  "name": "1",
+                  "tip": [
+                    "Set to 1"
+                  ]
+                }
+              ]
+            },
+            {
               "name": "enable_path_with_trailing_separator",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.enable_path_with_trailing_separator }} (Default: 1)",
