--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -540,6 +540,27 @@
               ]
             },
             {
+              "name": "enable_menu_show_below",
+              "tip": [
+                "当前值: {{ $PSCompletions.config.enable_menu_show_below }} (默认值: 0)",
+                "当模块补全菜单需要在光标上方显示时，滚动内容缓冲区，让光标回到顶部，然后在光标下方显示菜单。"
+              ],
+              "next": [
+                {
+                  "name": "0",
+                  "tip": [
+                    "设置为 0 (默认值)"
+                  ]
+                },
+                {
+                  "name": "1",
+                  "tip": [
+                    "设置为 1"
+                  ]
+                }
+              ]
+            },
+            {
               "name": "enable_path_with_trailing_separator",
               "tip": [
                 "当前值: {{ $PSCompletions.config.enable_path_with_trailing_separator }} (默认值: 1)",
