--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -2379,8 +2379,9 @@
       },
       "config": {
         "err": {
-          "completion_suffix": "<@Magenta>{{ $arg[2] }}<@Red> can only be one or more spaces.",
-          "trigger_key": "<@Magenta>{{ $arg[3] }}<@Red> isn't a valid trigger key.",
+          "filter_symbol": "<@Red>It must contain at least two characters.",
+          "completion_suffix": "<@Red>It can only be one or more spaces.",
+          "trigger_key": "<@Red>It isn't a valid trigger key.",
           "v_1_or_0": "<@Red>It should be the number <@Magenta>1<@Red> or <@Magenta>0<@Red>, which means enabled or disabled.",
           "v_ge": "<@Red>It should be an integer number greater than or equal to<@Magenta>{{ $min }}.",
           "v_ge_le": "<@Red>It should be an integer number greater than or equal to <@Magenta>{{ $min }}<@Red> and less than or equal to <@Magenta>{{ $max }}<@Red>."
